--- a/produto/index.html
+++ b/produto/index.html
@@ -17,58 +17,17 @@
   <header class="header" data-header></header>
 
   <main>
-    <section class="product">
-      <img src="../assets/imgs/product.png" alt="Imagem do produto" class="product__img">
-      <h1 class="product__title">Produto XYZ</h1>
-      <p class="product__price">R$ 60,00</p>
-      <p class="product__description">Voluptas voluptatum quibusdam similique, class debitis alias maecenas eveniet ridiculus, facilis fusce! Ullam conubia? Sociis, minima malesuada habitasse distinctio sequi aliqua malesuada. Quisque deleniti proin expedita, aliquid litora. Iste recusandae? Commodo, quia ridiculus doloribus vero dictum? Penatibus donec placeat faucibus, dolorum do. Animi porta anim magnam. Iste recusandae? Commodo, quia ridiculus doloribus vero dictum? Penatibus donec placeat faucibus, dolorum do. Animi porta anim magnam.</p> 
-    </section>
+    <section data-prodsection></section>
 
     <section class="similarproducts">
       <h1 class="similarproduct__title">Produtos similares</h1>
-      <div class="similarproduct__products">
-        <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="../assets/imgs/devices-img1.png" alt="Imagem do produto XYZ">
-          <p class="similarproduct__product--description">Controle XYZ</p>
-          <p class="similarproduct__product--price">R$ 60,00</p>
-          <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
-        </div>
-        <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img2.png" alt="Imagem do produto XYZ">
-          <p class="similarproduct__product--description">Produto XYZ</p>
-          <p class="similarproduct__product--price">R$ 60,00</p>
-          <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
-        </div>
-        <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img3.png" alt="Imagem do produto XYZ">
-          <p class="similarproduct__product--description">Produto XYZ</p>
-          <p class="similarproduct__product--price">R$ 60,00</p>
-          <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
-        </div>
-        <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img4.png" alt="Imagem do produto XYZ">
-          <p class="similarproduct__product--description">Produto XYZ</p>
-          <p class="similarproduct__product--price">R$ 60,00</p>
-          <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
-        </div>
-        <div class="similarproduct__product similarproduct__product--desktop">
-          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img5.png" alt="Imagem do produto XYZ">
-          <p class="similarproduct__product--description">Produto XYZ</p>
-          <p class="similarproduct__product--price">R$ 60,00</p>
-          <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
-        </div>
-        <div class="similarproduct__product similarproduct__product--desktop">
-          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img6.png" alt="Imagem do produto XYZ">
-          <p class="similarproduct__product--description">Produto XYZ</p>
-          <p class="similarproduct__product--price">R$ 60,00</p>
-          <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
-        </div>
-      </div>
+      <div class="similarproduct__products" data-similarprods></div>
     </section>
 
   </main>
 
   <footer class="footer" data-footer></footer>
   <script src="../assets/js/main.js" type="module"></script> 
+  <script src="./product.js" type="module"></script> 
 </body>
 </html>
