--- a/produtos/index.html
+++ b/produtos/index.html
@@ -22,120 +22,12 @@
         <h1 class="allprod__title">Todos os Produtos</h1>
         <a href="../adicionar/"><button class="allprod__addbutton bluebutton">Adicionar produto</button></a>
       </div>
-      <div class="allprod__products">
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/starwars-img1.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Produto XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/starwars-img2.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Produto XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/starwars-img3.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Produto XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/starwars-img4.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Produto XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="../assets/imgs/starwars-img5.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Produto XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="../assets/imgs/starwars-img6.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Produto XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/devices-img1.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/devices-img2.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle e console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/devices-img3.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/devices-img4.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="../assets/imgs/devices-img5.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="../assets/imgs/devices-img6.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Game Boy Color</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img1.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Camisa Atari</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img2.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Camisa SNES</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img3.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle e console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product">
-          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img4.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle e console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img5.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle e console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-        <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img6.png" alt="Imagem do produto XYZ">
-          <p class="allprod__product--description">Controle e console XYZ</p>
-          <p class="allprod__product--price">R$ 60,00</p>
-          <p class="allprod__product--prodcode">#1111111</p>
-        </div>
-      </div>
+      <div class="allprod__products" data-allproducts></div>
     </section>
   </main>
 
   <footer class="footer" data-footer></footer>
   <script src="../assets/js/main.js"></script>
+  <script src="./allproducts.js" type="module"></script>
 </body>
 </html>
