--- a/produtos/index.html
+++ b/produtos/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/header.css">
-  <link rel="stylesheet" href="./manager-allproducts.css">
+  <link rel="stylesheet" href="./allproducts.css">
   <link rel="stylesheet" href="../assets/css/footer.css">
 </head>
 <body>
