--- a/assets/footer.html
+++ b/assets/footer.html
@@ -9,7 +9,7 @@
       <li class="footer__menu--item"><a href="#">Programa de fidelidade</a></li>
       <li class="footer__menu--item"><a href="#">Nossas lojas</a></li>
       <li class="footer__menu--item"><a href="#">Quero ser franqueado</a></li>
-      <li class="footer__menu--item"><a href="../produtos">Anuncie aqui (Administrador)</a></li>
+      <li class="footer__menu--item"><a href="#">Anuncie aqui</a></li>
     </ul>
   </nav>
   <div class="footer__contactus">
